# uCode1

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.nuggets/: TEST-NUGGET-001.nugget
ceefax/: Dockerfile  entrypoint.sh
ceefax/engine/: __init__.py  teletext_api.py
ceefax/gridui/: __init__.py  surface.py
ceefax/lens/: __init__.py  renderer.py
ceefax/mcp/: __init__.py  adapter.py
ceefax/skin/: __init__.py  themes.py
ceefax/spec/: README.md
core_py/: __init__.py  ceefax_cli.py  cli.py
core_py/agent_api/: __init__.py  client.py  server.py
core_py/bbc/: bbcsdl_bridge.py  lens.py  skin.py
core_py/bindings/: __init__.py  variable_binding.py
core_py/ceefax/: __init__.py  ceetex_app.py  feed_subscriber.py  mcp_protocol.py  spool.py  vdu_bridge.py
docs/: CHARACTER_SET_REFERENCE.md  CLI_COMMANDS.md  CLI_README.md  C_LAYER_CHEAT_SHEET.md  MARKDOWN_STANDARDS.md  QUICK_START.md  README.md  SPATIAL_CHARACTER_INTEGRATION.md  SPATIAL_CHARACTER_MAPPING.md  SPRITE_OBJECT_REFERENCE.md  USER_GUIDE.md  VAULT_DOCS_TEMPLATE.md
examples/: 01_hello.bas  02_maths.bas  03_guess.bas  04_teletext.bas  05_adventure.bas  README.md
fonts/: CREDITS.md  README.md  font-manifest.json
gameplay/: 2026-03-16-core-spatial-vocabulary-planning.md  2026-03-16-wizard-core-grid-v2-specs.md
lessons/: README.md  lesson_01.md  lesson_02.md
tests/: __init__.py  test_character.py  test_cli.py  test_init.py  test_lens_skin_mcp.py  test_liquid.py  test_mcp.py  test_narrator_lexicon.py  test_skins.py  test_snack_cli.py  test_vdu_to_ceetex.py
ucode1/: cli.py  mcp_client.py
ucode1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+81 files in other folders)
